form & formdata with test done

--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -8,6 +8,15 @@
                 'create': 'Create a new form',
                 'update': 'Form editing'
             } only %}
+
+            {% if item %}
+                <div class="ml-md-auto py-2 py-md-0">
+                    <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-secondary">
+                        <i class="fas fa-eye"></i>
+                        {{ 'Applications'|locale }}
+                    </a>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
@@ -17,60 +26,88 @@
         <div class="col-md-12">
             <div class="card">
                 <form method="post">
-                    <div class="card-header">
-                        <div class="d-flex align-items-center">
-                            <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link active show" data-toggle="pill" href="#form" role="tab">
-                                        {{ 'Form'|locale }}
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="pill" href="#recipient" role="tab">
-                                        {{ 'Recipients'|locale }}
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="pill" href="#other" role="tab">
-                                        {{ 'Other'|locale }}
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="card-body">
-                        <div class="tab-content">
-                            {# Tab: Форма #}
-                            <div class="tab-pane fade show active" id="form" role="tabpanel">
+                        <div class="row">
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Title'|locale,
+                                    'type': 'text',
+                                    'name': 'title',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Brief description of the form'|locale) ~ '"></i>',
+                                    'args': {
+                                        'value': item.title,
+                                        'required': true,
+                                        'placeholder': 'Contact form'|locale,
+                                    }
+                                } %}
+                            </div>
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Form handler address'|locale,
+                                    'type': 'text',
+                                    'name': 'address',
+                                    'prefix': base_url() ~ '/form/',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Form address. You can leave it blank, then the value will be generated automatically. It is allowed to use only Latin characters and numbers without spaces'|locale) ~ '"></i>',
+                                    'args': {
+                                        'value': item.address,
+                                        'placeholder': 'contact-form',
+                                    }
+                                } %}
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                {% include 'cup/editor.twig' with {
+                                    'label': 'Template'|locale,
+                                    'name': 'template',
+                                    'args': {
+                                        'value': item.template
+                                    }
+                                } %}
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'E-Mail addresses of recipients'|locale,
+                                    'message': 'Each new line must be a separate recipients E-Mail address. Use ":" character to separate E-Mail:Recipient name'|locale,
+                                    'type': 'textarea',
+                                    'name': 'mailto',
+                                    'args': {
+                                        'value': item.mailto ? item.mailto|join('\n') : user.getEmail(),
+                                        'required': true,
+                                        'placeholder': 'manager@example.com',
+                                        'style': 'height: 70px;',
+                                    }
+                                } %}
+                            </div>
+                            <div class="col-md-6">
+                                {% include 'cup/form.twig' with {
+                                    'label': 'Enable sending a copy to the applicant'|locale,
+                                    'message': 'A copy of the form will be sent to the applicant if a filled <code>email</code> field is found.<br/>Default: disabled'|locale,
+                                    'type': 'select',
+                                    'name': 'authorSend',
+                                    'args': {
+                                        'option': _(['yes', 'no']),
+                                        'selected': item.authorSend ? 'yes' : 'no'
+                                    }
+                                } %}
+                            </div>
+                        </div>
+
+                        <div class="accordion mt-3">
+                            <button class="btn btn-outline-white btn-block text-center" type="button" data-toggle="collapse" data-target="#form-more">
+                                {{ 'More'|locale }} <i class="fas fa-arrow-down"></i>
+                            </button>
+
+                            <div id="form-more" class="collapse" data-parent=".accordion">
                                 <div class="row">
-                                    <div class="col-md-6">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Title'|locale,
-                                            'type': 'text',
-                                            'name': 'title',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Brief description of the form'|locale) ~ '"></i>',
-                                            'args': {
-                                                'value': item.title,
-                                                'required': true,
-                                                'placeholder': 'Contact form'|locale,
-                                            }
-                                        } %}
-                                    </div>
-                                </div>
-
-                                <hr>
-
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        {% include 'cup/editor.twig' with {
-                                            'label': 'Template'|locale,
-                                            'name': 'template',
-                                            'args': {
-                                                'value': item.template
-                                            }
-                                        } %}
-                                    </div>
-
                                     <div class="col-md-12">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Template'|locale,
@@ -84,70 +121,8 @@
                                             }
                                         } %}
                                     </div>
-                                </div>
-                            </div>
 
-                            {# Tab: Получатели #}
-                            <div class="tab-pane fade" id="recipient" role="tabpanel">
-                                <div class="row">
                                     <div class="col-md-6">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'E-Mail addresses of recipients'|locale,
-                                            'message': 'Each new line must be a separate recipients E-Mail address. Use ":" character to separate E-Mail:Recipient name'|locale,
-                                            'type': 'textarea',
-                                            'name': 'mailto',
-                                            'args': {
-                                                'value': item.mailto ? item.mailto|join('\n') : user.getEmail(),
-                                                'required': true,
-                                                'placeholder': 'manager@example.com',
-                                                'style': 'min-height: 133px;'
-                                            }
-                                        } %}
-                                    </div>
-                                    <div class="col-md-6">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Enable sending a copy to the applicant'|locale,
-                                            'message': 'A copy of the form will be sent to the applicant if a filled <code>email</code> field is found.<br/>Default: disabled'|locale,
-                                            'type': 'select',
-                                            'name': 'authorSend',
-                                            'args': {
-                                                'option': _(['yes', 'no']),
-                                                'selected': item.authorSend ? 'yes' : 'no'
-                                            }
-                                        } %}
-                                    </div>
-                                </div>
-                            </div>
-
-                            {# Tab: Другое #}
-                            <div class="tab-pane fade" id="other" role="tabpanel">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Usage page URLs'|locale,
-                                            'message': 'Each new line must be a separate address of the page where the form is placed. Use the "*" character to specify any page address.'|locale,
-                                            'type': 'textarea',
-                                            'name': 'origin',
-                                            'args': {
-                                                'value': item.origin ? item.origin|join('\n') : '*',
-                                                'required': true,
-                                                'placeholder': full_url_for('common:main'),
-                                                'style': 'min-height: 133px;'
-                                            }
-                                        } %}
-                                    </div>
-                                    <div class="col-md-6">
-                                        {% include 'cup/form.twig' with {
-                                            'label': 'Form handler address'|locale,
-                                            'type': 'text',
-                                            'name': 'address',
-                                            'prefix': base_url() ~ '/form/',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Form address. You can leave it blank, then the value will be generated automatically. It is allowed to use only Latin characters and numbers without spaces'|locale) ~ '"></i>',
-                                            'args': {
-                                                'value': item.address,
-                                                'placeholder': 'contact-form',
-                                            }
-                                        } %}
                                         {% include 'cup/form.twig' with {
                                             'label': 'Enable reCAPTCHA verification'|locale,
                                             'message': 'Ability to disable reCAPTCHA validation individually for the current form.<br/>Default: enabled'|locale,
@@ -159,9 +134,21 @@
                                             }
                                         } %}
                                     </div>
-                                </div>
+                                    <div class="col-md-6">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Usage page URLs'|locale,
+                                            'message': 'Each new line must be a separate address of the page where the form is placed. Use the "*" character to specify any page address.'|locale,
+                                            'type': 'textarea',
+                                            'name': 'origin',
+                                            'args': {
+                                                'value': item.origin ? item.origin|join('\n') : '*',
+                                                'required': true,
+                                                'placeholder': full_url_for('common:main'),
+                                                'style': 'height: 70px;',
+                                            }
+                                        } %}
+                                    </div>
 
-                                <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Duplicate data'|locale,
