--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -33,6 +33,12 @@
                                 <div class="row">
                                     <div class="col-6 col-sm">
                                         {{ item.date|df }}
+
+                                        <div class="text-black-50 ml-2 d-none d-lg-inline">
+                                            {% if item.hasFiles() %}
+                                                <i class="fas fa-file" data-toggle="tooltip" data-placement="right" title="{{ 'Has files'|locale }}"></i>
+                                            {% endif %}
+                                        </div>
                                     </div>
                                     <div class="col-6 col-sm-4 text-right">
                                         <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the entry?'|locale }}');">
