--- a/src/Template/cup/form-image.twig
+++ b/src/Template/cup/form-image.twig
@@ -31,7 +31,7 @@
                                     'type': 'number',
                                     'name': 'files[' ~ file.uuid ~ '][order]',
                                     'args': {
-                                        'value': file.pivot.order,
+                                        'value': file.order(),
                                     }
                                 } %}
                             </div>
