--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -4,7 +4,7 @@
 
 {% block head %}
     <meta name="google" content="notranslate">
-    <meta name="theme-color" content="#1572e8">
+    <meta name="theme-color" content="#1269db">
     <meta name="apple-mobile-web-app-title" content="WebSpace Engine">
 
     <link rel="icon" href="/assets/img/icon/32.png">
@@ -26,7 +26,7 @@
             <div class="wrapper">
                 <div class="main-header">
                     <!-- Logo Header -->
-                    <div class="logo-header" data-background-color="blue">
+                    <div class="logo-header" data-background-color="blue2">
                         <a href="/cup" class="logo text-white">WebSpace Engine</a>
 
                         <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                 </div>
 
                 <!-- Sidebar -->
-                <div class="sidebar sidebar-style-2" data-background-color="">
+                <div class="sidebar sidebar-style-2" data-background-color="white">
                     <div class="sidebar-wrapper scrollbar scrollbar-inner">
                         <div class="sidebar-content">
                             {% include 'cup/navigation.twig' %}
